# agent-ai-projects

projects/ambient-email-agent/: langgraph.json  main.py  pyproject.toml
projects/ambient-email-agent/notebooks/: hilt_plus_custom_middleware.ipynb
projects/ambient-email-agent/src/ambient_email_agent/: email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_v2.py  prompts.py  schemas.py  utils.py
projects/ambient-email-agent/src/ambient_email_agent/custom_middleware/: custom_interrupt_middleware.py  tool_interrupt_configuration.py
projects/ambient-email-agent/src/ambient_email_agent/custom_middleware/interrupt_request_payload_builders/: question_email_tool_payload.py  schedule_email_tool_payload.py  write_email_tool_payload.py
projects/ambient-email-agent/src/ambient_email_agent/custom_middleware/interrupt_response_handlers/: question_email_intterup_response_handler.py  schedule_email_interrupt_response_handler.py  write_tool_interrupt_response_handler.py
projects/ambient-email-agent/src/ambient_email_agent/custom_middleware/interrupt_response_handlers/shared/: shared_handle_tool_edit.py
projects/ambient-email-agent/src/ambient_email_agent/tools/: base.py
projects/career-alterego-agent/: pyproject.toml
projects/deep-agents-from-scratch/: README.md  main.py  pyproject.toml
projects/deep-agents-from-scratch/notebooks/: 0_create_agent.ipynb  1_todo.ipynb  2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb
projects/deep-agents-from-scratch/src/deep_agents_from_scratch/: file_tools.py  prompts.py  research_tools.py  state.py  task_tool.py  todo_tools.py
projects/deep-research-with-langgraph/: README.md  langgraph.json  pyproject.toml
projects/deep-research-with-langgraph/notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_supervisor.ipynb  4_full_agent.ipynb  4_full_agent_tavily.ipynb  5_test_sonar_agent.ipynb
projects/deep-research-with-langgraph/notebooks/langsmith_evaluation/: evaluate_a_chatbot.ipynb  evaluate_a_rag.ipynb  evaluate_a_react_agent_with_pytest.ipynb  langsmith_evaluation_poc.ipynb
projects/deep-research-with-langgraph/src/deep_research_with_langgraph/: multi_agent_supervisor.py  prompts.py  research_agent.py  research_agent_scope.py  research_with_sonar_full.py  research_with_tavily_full.py  sonar_agent.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  utils.py
projects/quick-hands-on-space/: main.py  pyproject.toml
projects/quick-hands-on-space/notebooks/: handoffs_customer_support.ipynb  router_knowledge_base.ipynb  sidekick_assistant.ipynb  skills_sql_assistant.ipynb  subagents_personal_assistant.ipynb  utils.py
shared/: pyproject.toml
shared/notebooks/: 0_perplexity_poc.ipynb
