[project]
name = "deep-agents-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "markdownify>=1.2.2",
    "notebook>=7.5.2",
    "rich>=14.2.0",
    "tavily>=1.1.0",
]
[project.optional-dependencies]
notebooks = ["jupyter", "notebook", "ipykernel"]
